# DOBOT-Magician-E6-ROS2

./: .gitignore  README.md  upstream.repos
dobot_bringup_v4/: package.xml
dobot_e6/: CMakeLists.txt  package.xml
dobot_e6_bringup/: CMakeLists.txt  package.xml
dobot_e6_bringup/launch/: demo_mtc.launch.py  robot_state_publisher.launch.py  ros2_control.launch.py
dobot_e6_bringup/scripts/: start_dobot.sh  start_perception.sh
dobot_e6_description/: CMakeLists.txt  package.xml
dobot_e6_description/config/: ros2_controllers.yaml
dobot_e6_description/meshes/base/visual/: base_link.STL
dobot_e6_description/meshes/dobot_e6_arm/visual/: flange.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
dobot_e6_description/meshes/end_effectors/visual/: Tester.STL
dobot_e6_description/meshes/weed_removal_tool/visual/: blade_left.STL  blade_right.STL  gripper_housing.STL
dobot_e6_description/rviz/: dobot_e6_description.rviz
dobot_e6_description/urdf/control/: dobot_e6_ros2_control.urdf.xacro
dobot_e6_description/urdf/mech/: base_link.urdf.xacro  dobot_e6_arm.urdf.xacro  tester_end_effector.urdf.xacro  weed_removal_tool.urdf.xacro
dobot_e6_description/urdf/robots/: dobot_e6.urdf.xacro
dobot_e6_moveit/: .setup_assistant  CMakeLists.txt  package.xml
dobot_e6_moveit/launch/: demo.launch.py  dobot_moveit.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
dobot_moveit/dobot_moveit/: action_move_server.py
dobot_moveit/launch/: dobot_moveit.launch.py  moveit_demo.launch.py
dobot_msgs_fb/: CMakeLists.txt  package.xml
dobot_msgs_fb/action/: MoveToHome.action  MoveToPose.action
dobot_msgs_fb/msg/: FrameTransform.msg
dobot_msgs_fb/srv/: ApproachObject.srv  RemoveWeed.srv
dobot_mtc_tasks/: CMakeLists.txt  package.xml
dobot_mtc_tasks/config/: approach_params.yaml  avoid_remove_weed_params.yaml  remove_weed_params.yaml
dobot_mtc_tasks/include/: asparagus.hpp
dobot_mtc_tasks/launch/: avoid_remove_weed_mtc.launch.py  mtc_approach.launch.py  remove_weed_mtc.launch.py
dobot_mtc_tasks/src/: approach_mtc.cpp  avoid_remove_weed_mtc.cpp  remove_weed_mtc.cpp
dobot_system_tests/: CMakeLists.txt  package.xml
dobot_system_tests/config/: move_to_home.yaml
dobot_system_tests/launch/: fb_actions.launch.py
dobot_system_tests/src/: move_to_home_action_client.cpp  move_to_home_action_server.cpp  move_to_pose_action_client.cpp  move_to_pose_action_server.cpp
farmbeast_bringup/: CMakeLists.txt  package.xml
farmbeast_bringup/scripts/: start_dobot.sh  start_framework.sh
farmbeast_utils/: CMakeLists.txt  package.xml
farmbeast_utils/config/: frame_transform.yaml
farmbeast_utils/launch/: frame_transform.launch.py  gripper_bringup.launch.py
farmbeast_utils/src/: frame_transform_publisher.cpp
gripper_hardware_interface/: CMakeLists.txt  gripper_hardware.xml  package.xml
gripper_hardware_interface/include/gripper_hardware_interface/: arduino_comms.h  config.h  gripper_system.hpp
gripper_hardware_interface/src/: arduino_comms.cpp  gripper_system.cpp
gripper_system_tests/: CMakeLists.txt  package.xml
gripper_system_tests/config/: gripper_controllers.yaml
gripper_system_tests/launch/: gripper_control.launch.py  robot_state_publisher.launch.py
gripper_system_tests/urdf/control/: gripper_control.urdf.xacro
gripper_system_tests/urdf/gripper/: gripper.urdf.xacro
gripper_system_tests/urdf/mech/: gripper.urdf.xacro
me6_moveit/: .setup_assistant  CMakeLists.txt  package.xml
me6_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  me6_robot.ros2_control.xacro  me6_robot.srdf  me6_robot.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
me6_moveit/launch/: dobot_moveit.launch.py
perception/: package.xml  setup.py
perception/config/: calibration.yaml
perception/perception/: helper_csv.py  hsv_tuner.py  publisher_avoid.py  publisher_node.py  publisher_node_object.py  test.py
