<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dobot_e6</name>
  <version>0.0.1</version>
  <description>Metapackage for dobot magician e6</description>
  <maintainer email="ziga.breznikar@student.um.si">ziga_jazzy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>dobot_e6_bringup</exec_depend>
  <exec_depend>dobot_e6_description</exec_depend>
  <exec_depend></exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
